# AS4VXGI

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
framework/: CMakeLists.txt
framework/core/: game.cpp  game.h
framework/render/: camera.cpp  camera.h  common.h  d3d11_common.h  render.cpp  render.h
framework/render/resource/: buffer.cpp  buffer.h  buffer.hpp  fence.cpp  fence.h  material.cpp  material.h  pipeline.cpp  pipeline.h  resource.h  sampler.cpp  sampler.h  shader.cpp  shader.h  shader_cache.cpp  shader_cache.h  texture.cpp  texture.h
framework/render/scene/: light.h  material.cpp  mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h
framework/render/scene/lights/: ambient.cpp  direction.cpp  point.cpp
framework/shaders/common/: registers.hlsl  translate.fx  types.fx
framework/win32/: win.cpp
resources/models/: suzanne.fbx  terrain.fbx
resources/shaders/debug/: albedo.hlsl  box.hlsl  normal.hlsl
resources/shaders/deferred/: opaque_pass.hlsl
resources/shaders/voxels/: clear.hlsl  complete.hlsl  complete_reset.hlsl  copy_voxels.hlsl  draw.hlsl  fill.hlsl  voxel.fx
src/: as4vxgi.cpp  as4vxgi.h  main.cpp
src/math/: model_tree.cpp  model_tree.h
